# HaSe

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  cheesebridge_clear_demo.c  cheesebridge_triangle_demo.c  d3d11_smoke.c  demo_net.c  demo_net.h  fake_host.c  guest_demo.c  spv_to_header.cmake  triangle.frag.glsl  triangle.vert.glsl
guest/: CMakeLists.txt  cheesebridge_icd.json.in  cheesebridge_icd.ver
guest/src/: icd.h  icd_command.c  icd_debug.c  icd_device.c  icd_handles.c  icd_instance.c  icd_loader.c  icd_log.c  icd_memory.c  icd_pipeline.c  icd_queue.c  icd_stub.c  icd_swapchain.c  icd_sync.c  icd_transport.c
hase/: CMakeLists.txt
hase/src/: hase_window_host.mm  hasectl.c
host/: CMakeLists.txt
host/src/: host.h  host_dispatch.mm  host_log.mm  host_main.mm  host_moltenvk.mm  host_replay.mm  host_reply.mm  host_resource_table.mm  host_window.mm
protocol/: CMakeLists.txt  cheesebridge_proto.h  cheesebridge_wire.c  cheesebridge_wire.h
scripts/: install-limactl.sh
